2005-03-01  Nick Clifton  <nickc@redhat.com>

	* ld-cris/warn3.d: Only run this version of the test for cris-aout
	targets.
	* ld-cris/warn4.d: Only run this version of the test for cris-elf
	targets.

2005-02-22  Eric Christopher  <echristo@redhat.com>

	* ld-mips-elf/reloc-merge-lo16.d: Correct symbol
	table size for __start.

2005-02-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-elfvsb/hidden2.d: Expect OBJECT.
	* ld-elfvsb/hidden2.s: Force type OBJECT.
	* ld-elfvsb/hidden2.ld: Place .dynamic explicitly.
	* ld-elf/start.s: Provide __start for MIPS.
	* ld-elfcomm/elfcomm.exp: Accept MIPS common section.  XFAIL size change
	test.
	* ld-elf/warn1.d: Use group.ld instead of -Ttext.

2005-02-21  Alan Modra  <amodra@bigpond.net.au>

	* lib/ld-lib.exp (run_dump_test): Don't require a dump program if
	#warning given.  Rearrange to allow $program to remain unset.
	Don't allow gas errors.  Append objcopy_as_link output to that
	from the linker before testing against expected output.  Fail the
	test if warning not found when expected.  Conversely fail the
	test if ld errors or warnings given when not expected.

2005-02-21  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/exclude1.s: Use ".dc.a".
	* ld-elfvsb/hidden2.s: Likewise.

2005-02-21  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/warn1.d: Specify -Ttext.
	* ld-scripts/align.exp (align2a, align2b: Don't run on aout targets.
	* ld-scripts/align2.t: Discard all but .text and .data.
	* ld-scripts/align2a.d: Accept non-readonly for coff.
	* ld-scripts/align2b.d: Likewise.
	* lib/ld-lib.exp (is_aout_format): New function.

2005-02-18  Alan Modra  <amodra@bigpond.net.au>

	* ld-scripts/align2a.d: Don't assume anything about section
	padding or alignment, or max page size.  Allow 64-bit addresses.
	* ld-scripts/align2b.d: Likewise.

2005-02-17  Zack Weinberg  <zack@codesourcery.com>

	* ld-scripts/align.exp: Rename existing "ALIGN" test to "align1".
	Add dump tests "align2a", "align2b", "align2c".